<resources>
    <string name="app_name">Community</string>
    <color name="titletextcolor">@color/colorAccent</color>
    <color name="titlebackgroundcolor">@color/colorPrimaryDark</color>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_login_bold">LOGIN</string>
    <string name="action_register_bold">REGISTER</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_different_password">The password must match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_meetup_name_required">Meetup name is required</string>
    <string name="error_event_name_required">Event name is required</string>
    <string name="error_meetup_max_attendees_value">Must be 2 or more</string>
    <string name="error_meetup_duration_value">Must be 1 hour long or more</string>
    <string name="error_community_for_meetup_required">Community required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Community</string>
    <string name="action_settings">Settings</string>
    <string name="action_About">About</string>
    <string name="action_Profile">Profile</string>
    <string name="action_Notif">Notifications</string>
    <string name="action_signout">Sign Out</string>
    <string name="action_sign_up">Finish</string>
    <string name="action_next">Next</string>
    <string name="search_title">Search</string>
    <string name="drawer_layout">Drawer</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Register Prompts -->
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_username">Username</string>

    <!-- Dialog Prompts -->
    <string name="prompt_add_meetup_title">Add a meetup</string>
    <string name="prompt_groupname">Group Name</string>
    <string name="prompt_meetup_name">Meetup Name *</string>
    <string name="prompt_groupdescription">Description</string>
    <string name="prompt_meetup_description">Description</string>
    <string name="prompt_meetup_location">Location</string>
    <string name="prompt_meetup_duration">Duration (default: 1 hr)</string>
    <string name="prompt_meetup_max_attendees">Max. Attendees (default: 20)</string>
    <string name="prompt_private_meetup">Private?</string>
    <string name="prompt_add_meetup_on_community_spinner_hint">Which Community? *</string>
    <string name="prompt_add_button">ADD</string>
    <string name="prompt_add_event_title">Add a meetup</string>
    <string name="prompt_event_name">Event Name *</string>
    <string name="prompt_event_description">Description</string>
    <string name="prompt_event_location">Location</string>
    <string name="prompt_add_event_on_community_spinner_hint">Which Community? *</string>

    <!-- Bottom Sheet -->
    <string name="action_take_photo">Take Photo</string>
    <string name="action_upload_photo">Upload Photo</string>
    <string name="action_download_photo">Download Photo</string>
    <string name="action_remove_photo">Remove Photo</string>


    <!-- Home Fragments -->
    <string name="hello_blank_fragment">"Hello this is the Community's home!"</string>
    <string name="hello_blank_fragment_event">Welcome to Events</string>
    <string name="hello_blank_fragment_meetup">Sit down for a cup of coffee with a new friend</string>
    <string name="hello_blank_fragment_group">join a group or start your own</string>
    <string name="hello_blank_fragment_notif">Ugh...these notifications</string>

    <!-- String Array -->
    <string-array name="query_suggestions">
        <item>Events</item>
        <item>Meetups</item>
        <item>Groups</item>
        <item>Notifications</item>
        <item>Profile</item>
    </string-array>

    <!-- Grid Content -->
    <string name="epoxy">Groups</string>
    <string name="epoxy_meetups">Meetups</string>
    <string name="epoxy_events">Start An Event</string>
    <string name="header_subtitle">Welcome to Community Groups! Start A Group Now</string>
    <string name="meetup_header_subtitle">Welcome to Meetups! Start A Meetup Now</string>
    <string name="event_header_subtitle">Welcome to Events! Start An Event Now</string>
    <string name="button_add">Add</string>
    <string name="button_grid_hiking">HIKING</string>
    <string name="button_grid_adventure">Adventure</string>
    <string name="button_clear">Clear</string>
    <string name="button_shuffle">Shuffle</string>
    <string name="button_change">Change</string>

    <!-- Random Group Name -->
    <string name="group_0">UWB</string>
    <string name="group_1">Hiking</string>
    <string name="group_2">Adventure</string>
    <string name="group_3">HIKING</string>
    <string name="group_4">ADVENTURE</string>
    <string name="group_5">Sports</string>
    <string name="group_6">TRIBE</string>
    <string name="group_7">Tribe</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Profile -->
    <string name="user_profile_photo">http://igcdn-photos-f-a.akamaihd.net/hphotos-ak-xpa1/t51.2885-19/929118_455075441302693_1605108410_a.jpg</string>
    <string-array name="user_photos">
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xpf1/t51.2885-15/s306x306/e15/10665483_429615813855717_1490926670_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10891026_694434897342602_1094773634_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10894920_1382218332084671_10354293_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10895429_768163716566132_692639371_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10903214_589111004559561_1485881959_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914479_770066599745785_704061869_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10914587_1580079332227764_829762970_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10919231_605000369644967_1578007175_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10932142_330866587116424_1327271556_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xfa1/t51.2885-15/s306x306/e15/10932410_1544715455813452_1107632347_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xfp1/t51.2885-15/s306x306/e15/891516_579817258815508_1989379587_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/1922172_719849754801056_911351010_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10914370_1519297625009641_722250486_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903746_368501953321344_2002746420_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903270_1397263717236338_950192395_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10903242_441936642627221_576882729_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899295_796858437028648_664655000_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899139_948470841831743_1406659049_n.jpg</item>
        <item>http://scontent-a-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899123_922231267802027_1123900984_n.jpg</item>
        <item>http://scontent-b-fra.cdninstagram.com/hphotos-xaf1/t51.2885-15/s306x306/e15/10899087_405295322969722_20422376_n.jpg</item>
    </string-array>
</resources>
