<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="Add a new event"
                android:textSize="15dp"
                android:id="@+id/add_event_dialog_title" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edittext_background"
                    android:inputType="text"
                    android:hint="@string/prompt_event_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edittext_background"
                    android:inputType="text"
                    android:hint="@string/prompt_event_description"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edittext_height"
                    android:background="@drawable/edittext_background"
                    android:inputType="text"
                    android:hint="@string/prompt_event_location"/>
            </android.support.design.widget.TextInputLayout>




            <!--from "android:textColor" to "android:textColorLink" makes no effect. Not sure why.-->
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/event_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_add_event_on_community_spinner_hint"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorAccent"
                android:shadowColor="@color/colorPrimary"
                android:textColorLink="@color/colorAccent"
                app:met_floatingLabel="highlight" />

            <!--<ListView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/meetup_list_view"-->
            <!--android:layout_weight="1" />-->

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_add_button"
                    android:id="@+id/add_event_btn"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>